2007-09-26    <tino@firebird.03.softkill.net>

	* proc.h (tino_daemonize_pidOb): typo fixes

	* Makefile.proto: CygWin fix: HERE was not quoted in all cases.
	Under CygWin sometimes (depends on the Windows version) there are
	spaces in the default paths.

	* sock.h: tino_sock_select now in separate file.

2007-09-21    <tino@firebird.03.softkill.net>

	* sleep.h: no more depends on alarm.h

	* file.h (tino_file_rmdirE, tino_file_unlinkE): added

	* proc.h (tino_daemonize_pidOb, tino_daemonizeOb): added

	* Makefile.proto (CXXFLAGS): added
	(CFLAGS): Typo corrected, it must be called DBG_CFLAGS and not
	DBG_FLAGS!  (For compat both can be used.)

	* Makefile.tino.dist (ADD_CCFLAGS): added flags for C++

	* Makefile.proto: Double colon list changed to single colon list,
	as this (with implicite rules) always compiled the target twice.
	However this perhaps makes it incompatible to other makes (I have
	in mind, from the 80s on Atari ST, as there you were allowed
	either *one* single colon rule or multiple double colon rules).
 
	* sock.h (tino_sock_error): calls to tino_sock_error improved.
	Now it shall be more reliable (longjmp case) and is more easy to
	use (default -1 return).

2007-09-20    <tino@firebird.03.softkill.net>

	* getopt.h (tino_getopt_usage): usage on TINO_GETOPT_MIN without
	TINO_GETOPT_MAX now better to understand

2007-09-19    <tino@firebird.03.softkill.net>

	* file.h (tino_file_blocking): new renamed to upd (C++)

2007-09-18    <tino@firebird.03.softkill.net>

	* sock.h (tino_sock_select_timeoutEn): BUGfix: if forepoll was
	called out of alarm functions, it did not work.  Also the loop
	returned after 1000 signals, which was a little bit wrong.
	(tino_sock_select_timeoutEn): longstanding BUG removed: If a
	socket is freed in select_loop, the next-iteration stopped.  This
	only had bad sideffects when a forcepoll was done, but this
	explains some "starvation" problems I saw.

	* sockbuf.h (tino_sockbuf_processN): poll function now gets passed